--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <section class="flex-1 lg:flex gap-6  ">
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit6.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2>12.90$ - 18.85$</h2>
@@ -233,7 +233,7 @@
             </div>
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit7.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2>12.90$ - 18.85$</h2>
@@ -261,7 +261,7 @@
             </div>
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit8.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2>12.90$ - 18.85$</h2>
@@ -289,7 +289,7 @@
             </div>
             <div class="card w-96 bg-base-100 shadow-xl">
                 <figure class="px-10 pt-10">
-                    <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                    <img src="images/fruit9.png" alt="Shoes" class="rounded-xl" />
                 </figure>
                 <div class="card-body items-center text-center">
                     <h2>12.90$ - 18.85$</h2>
