--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
     <header class="container mx-auto px-5">
         <!-- navbar section -->
-        <nav class="lg:py-12  ">
+        <nav class="lg:py-6 lg:px-14 ">
 
-            <div class="flex justify-between  lg:bg-[#F85559] rounded-full py-8 px-5 lg:px-12 ">
+            <div class="flex justify-between  lg:bg-[#F85559] rounded-full py-4  lg:px-12 ">
 
+                <!-- menu part -->
                 <div class=" hidden lg:flex justify-start">
                     <ul class="menu menu-horizontal px-1 text-white text-lg">
                         <li><a>Home</a></li>
@@ -67,16 +68,13 @@
 
 
                 <!-- search box -->
-                <div class="hidden lg:block -mr-40">
-                    <form>
-                        <label for="default-search" class="mb-2 w-96 sr-only text-white">Search</label>
-
+                <div class="hidden lg:block -mr-36 ">
+                    <form>                   
                         <div class="relative">
+                            <input type="search" class=" p-4  text-base rounded-full border-0"
+                                placeholder="Search here">
 
-                            <input type="search" id="default-search" class="block w-full p-4  text-base rounded-full"
-                                placeholder="Search here" required>
-
-                            <div class="absolute inset-y-0 right-4 flex items-center pl-3 pointer-events-none">
+                            <div class="absolute inset-y-0 right-4 flex items-center pl-3 ">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                             </div>
 
@@ -102,7 +100,7 @@
         </nav>
 
         <!-- slider section -->
-        <section class=" container px-14 ">
+        <section class=" container lg:px-14 ">
             <div class="carousel w-full">
 
                 <!-- slider 1 -->
@@ -126,7 +124,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class="hidden lg:flex absolute -bottom-10 left-64 w-3/5 justify-center drop-shadow-md bg-white">
+                        class="hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -160,7 +158,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class="hidden lg:flex absolute -bottom-10 left-64 w-3/5 justify-center drop-shadow-md bg-white">
+                        class="hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -188,7 +186,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class=" hidden lg:flex absolute -bottom-10 left-64 w-3/5 justify-center drop-shadow-md bg-white h-10vh">
+                        class=" hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white h-10vh">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -217,7 +215,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class=" hidden lg:flex absolute -bottom-10 left-64 w-3/5 justify-center drop-shadow-md bg-white h-10vh">
+                        class=" hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white h-10vh">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -237,7 +235,7 @@
 
             <!-- deal desc -->
             <div class="lg:flex justify-between mb-12">
-                <div class="text-center lg:text-left ">
+                <div class="mx-4 lg:mx-0 text-center lg:text-left ">
                     <h2 class="text-4xl lg:text-5xl font-extrabold mb-5">Deal of the day</h2>
                     <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br>
                         Latin literature from 45 BC, making it over 2000 years old.
@@ -315,7 +313,7 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="grid justify-items-center">
                                         <img src="images/fruit6.png" alt="">
-                                        <h3 class="font-bold text-lg">Red Dragon</h3>
+                                        <h3 class="font-bold text-lg">Apples</h3>
                                         <p class="py-4">Professional employees are there for you to pick the most
                                             amazing and fresh fruits.</p>
                                         <!-- modal rating -->
@@ -364,7 +362,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2>12.90$ - 18.85$</h2>
-                        <p>Apples</p>
+                        <p>Orange</p>
 
                         <div class=" rating rating-md rating-half">
                             <input type="radio" name="rating-11" class="rating-hidden" />
@@ -389,7 +387,7 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="grid justify-items-center">
                                         <img src="images/fruit7.png" alt="">
-                                        <h3 class="font-bold text-lg">Red Dragon</h3>
+                                        <h3 class="font-bold text-lg">Orange</h3>
                                         <p class="py-4">Professional employees are there for you to pick the most
                                             amazing and fresh fruits.</p>
                                         <!-- modal rating -->
@@ -436,7 +434,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2>12.90$ - 18.85$</h2>
-                        <p>Apples</p>
+                        <p>Red Dragon</p>
 
                         <div class=" rating rating-md rating-half">
                             <input type="radio" name="rating-12" class="rating-hidden" />
@@ -509,7 +507,7 @@
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2>12.90$ - 18.85$</h2>
-                        <p>Apples</p>
+                        <p>Banana</p>
 
                         <div class=" rating rating-md rating-half">
                             <input type="radio" name="rating-10" class="rating-hidden" />
@@ -534,7 +532,7 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="grid justify-items-center">
                                         <img src="images/fruit9.png" alt="">
-                                        <h3 class="font-bold text-lg">Red Dragon</h3>
+                                        <h3 class="font-bold text-lg">Banana</h3>
                                         <p class="py-4">Professional employees are there for you to pick the most
                                             amazing and fresh fruits.</p>
                                         <!-- modal rating -->
@@ -588,7 +586,7 @@
         </section>
 
         <!-- meet the team -->
-        <section class="lg:container justify-center my-10 ">
+        <section class="lg:container justify-center ">
             <div class="hero min-h-screen rounded-lg" style="background-image: url('images/team.png'); ">
                 <div class="hero-overlay bg-opacity-75 "></div>
 
@@ -678,7 +676,7 @@
 
 
         <!-- why choose us section -->
-        <section class="py-24">
+        <section class="py-10 lg:py-24">
 
             <div class="text-center pb-10">
                 <h2 class="text-5xl font-semibold pb-5">Why Choose Us</h2>
@@ -688,9 +686,9 @@
 
             <div class="grid grid-cols-1 lg:grid-cols-3">
 
-                <div class="grid grid-cols-1 justify-center">
+                <div class="grid grid-cols-1 text-center lg:text-left">
                     <div class="flex">
-                        <div class="pr-5">
+                        <div class="pr-5 ">
                             <img class="w-10" src="images/group 1.png" alt="">
                         </div>
                         <div>
@@ -733,7 +731,7 @@
                 <div>
                     <div class="flex">
 
-                        <div class="text-right mr-5 mb-5" dir="rtl">
+                        <div class="text-center lg:text-right mr-5 mb-5" dir="rtl">
                             <h3 class=" font-semibold">Integrated Supplier</h3>
                             <h5 class="bg-zinc-900 w-24 border-b-4  mb-2 text-end "></h5>
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
@@ -742,9 +740,10 @@
                             <img class="w-9" src="images/group 1.png" alt="">
                         </div>
                     </div>
+
                     <div class="flex">
 
-                        <div class="text-right mr-5 mb-5" dir="rtl">
+                        <div class="text-center lg:text-right mr-5 mb-5" dir="rtl">
                             <h3 class=" font-semibold">Sustainable Practice</h3>
                             <h5 class="bg-zinc-900 w-24 border-b-4  mb-2 text-end "></h5>
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
@@ -755,7 +754,7 @@
                     </div>
                     <div class="flex">
 
-                        <div class="text-right mr-5" dir="rtl">
+                        <div class="text-center lg:text-right mr-5" dir="rtl">
                             <h3 class=" font-semibold">The Benefits Only</h3>
                             <h5 class="bg-zinc-900 w-24 border-b-4  mb-2 text-end "></h5>
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
