--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
                     <div class="mx-auto text-center text-white pt-20">
-                        <h1 class="text-5xl font-bold">Exotic tastes at your <br>doorstep</h1>
+                        <h1 class="text-4xl lg:text-5xl font-bold">Exotic tastes at your <br>doorstep</h1>
                         <p class="mt-5">We supply highly quality organic products</p>
                         <button
                             class="btn btn-error text-white border-none normal-case hover:text-black hover:bg-slate-300 px-8 mt-5">Shop
@@ -236,7 +236,7 @@
             <!-- deal desc -->
             <div class="lg:flex justify-between mb-12">
                 <div class="mx-4 lg:mx-0 text-center lg:text-left ">
-                    <h2 class="text-4xl lg:text-5xl font-extrabold mb-5">Deal of the day</h2>
+                    <h2 class="text-5xl font-bold mb-5">Deal of the day</h2>
                     <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br>
                         Latin literature from 45 BC, making it over 2000 years old.
                     </p>
@@ -684,7 +684,7 @@
         <section class="py-10 lg:py-24">
 
             <div class="text-center pb-10">
-                <h2 class="text-5xl font-semibold pb-5">Why Choose Us</h2>
+                <h2 class="text-5xl font-bold pb-5">Why Choose Us</h2>
                 <p class="pb-8">Contrary to popular belief, is not simply random text. It has roots in a piece of
                     classical <br>Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
