--- a/index.html
+++ b/index.html
@@ -794,12 +794,13 @@
                 </div>
                 <div>
                     <div class="grid grid-flow-col gap-4 items-center">
-                        <a><img class="w-10" src="images/twitter 1.png" alt=""></a>
-                        <a><img class="w-10" src="images/facebook 1 (1).png" alt=""></a>
-                        <a><img class="w-10" src="images/Group 49.png" alt=""></a>
-                        <a><img class="w-10" src="images/linkedin 1.png" alt=""></a>
-                        <a><img class="w-10" src="images/instagram 1.png" alt=""></a>
-                        <a><img class="w-10" src="images/apple 1.png" alt=""></a>
+                        <a href=""><img class="w-10" src="images/twitter 1.png" alt=""></a>
+                        <a href=""><img class="w-10" src="images/facebook 1 (1).png" alt=""></a>
+                        <a href=""><img class="w-10" src="images/Group 49.png" alt=""></a>
+                        <a href=""><img class="w-10" src="images/linkedin 1.png" alt=""></a>
+                        <a href=""><img class="w-10" src="images/instagram 1.png" alt=""></a>
+                        <a href=""><img class="w-10" src="images/apple 1.png" alt=""></a>
+                      
                     </div>
                 </div>
 
