--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="carousel w-full">
 
                 <!-- slider 1 -->
-                <div id="slide1" class="carousel-item relative w-full bg-cover bg-center  h-[350px] lg:h-[470px]"
+                <div id="slide1" class="carousel-item relative w-full bg-cover bg-center  min-h-[350px] lg:min-h-[470px]"
                     style="background-image: url('images/banner1.png'); ">
 
 
@@ -124,7 +124,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class="hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white">
+                        class="hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 rounded-md justify-center drop-shadow-md bg-white">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -158,7 +158,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class="hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white">
+                        class="hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 rounded-md justify-center drop-shadow-md bg-white">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -186,7 +186,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class=" hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white h-10vh">
+                        class=" hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 rounded-md justify-center drop-shadow-md bg-white h-10vh">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -215,7 +215,7 @@
 
                     <!-- slider lower part -->
                     <div
-                        class=" hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 justify-center drop-shadow-md bg-white h-10vh">
+                        class=" hidden lg:flex absolute -bottom-10 left-44 w-fit px-10 rounded-md justify-center drop-shadow-md bg-white h-10vh">
                         <img src="images/fruit1.png" alt="">
                         <img src="images/fruit2.png" alt="">
                         <img src="images/fruit3.png" alt="">
@@ -595,7 +595,7 @@
         </section>
 
         <!-- meet the team -->
-        <section class="lg:container justify-center ">
+        <section class="px-4 lg:px-0 lg:container justify-center ">
             <div class="hero min-h-screen rounded-lg" style="background-image: url('images/team.png'); ">
                 <div class="hero-overlay bg-opacity-75 "></div>
 
@@ -729,7 +729,7 @@
 
                 </div>
 
-                <div>
+                <div class="mx-auto">
                     <img class="w-" src="images/whychoose1.png" alt="">
                 </div>
 
