--- a/index.html
+++ b/index.html
@@ -595,14 +595,14 @@
         </section>
 
         <!-- meet the team -->
-        <section class="px-4 lg:px-0 lg:container justify-center ">
+        <section class="px-4 lg:px-0  lg:container justify-center ">
             <div class="hero min-h-screen rounded-lg" style="background-image: url('images/team.png'); ">
                 <div class="hero-overlay bg-opacity-75 "></div>
 
                 <div class=" text-center ">
                     <div class="py-5 text-white">
-                        <h1 class="mb-5 text-5xl font-semibold">Meet the team section</h1>
-                        <p class="mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece
+                        <h1 class="mb-5 text-5xl font-semibold py-10">Meet the team section</h1>
+                        <p class="mb-5 px-4">Contrary to popular belief, is not simply random text. It has roots in a piece
                             of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
 
                         <!-- team member card -->
@@ -742,7 +742,7 @@
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                         <div>
-                            <img class="w-9" src="images/group 1.png" alt="">
+                            <img class="w-9" src="images/fruit 1.jpg" alt="">
                         </div>
                     </div>
 
@@ -754,7 +754,7 @@
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                         <div>
-                            <img class="w-9" src="images/group 1.png" alt="">
+                            <img class="w-9" src="images/ice-cream 1.png" alt="">
                         </div>
                     </div>
                     <div class="flex">
@@ -765,7 +765,7 @@
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                         <div>
-                            <img class="w-9" src="images/group 1.png" alt="">
+                            <img class="w-9" src="images/like 1.png" alt="">
                         </div>
                     </div>
                 </div>
