--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="flex gap-3 justify-center mt-5">
                     <div>
                         <div class="flex items-center">
-                            <h2 class="text-4xl lg:text-5xl font-extrabold ">29</h2>
+                            <h2 class="text-4xl lg:text-5xl font-bold ">29</h2>
                             <img class="w-6 h-6" src="images/Frame (1).png" alt="">
                         </div>
                         <p>Days</p>
@@ -253,7 +253,7 @@
 
                     <div>
                         <div class="flex items-center">
-                            <h2 class="text-4xl lg:text-5xl font-extrabold "> 15</h2>
+                            <h2 class="text-4xl lg:text-5xl font-bold "> 15</h2>
                             <img class="w-6 h-6" src="images/Frame (4).jpg" alt="">
                         </div>
                         <p>Hours</p>
@@ -261,7 +261,7 @@
 
                     <div>
                         <div class="flex items-center">
-                            <h2 class="text-4xl lg:text-5xl font-extrabold ">25</h2>
+                            <h2 class="text-4xl lg:text-5xl font-bold ">25</h2>
                             <img class="w-6 h-6" src="images/Frame (4).jpg" alt="">
                         </div>
                         <p>Minutes</p>
@@ -269,7 +269,7 @@
 
                     <div>
                         <div class="flex">
-                            <h2 class="text-4xl lg:text-5xl font-extrabold ">08</h2>
+                            <h2 class="text-4xl lg:text-5xl font-bold ">08</h2>
                         </div>
                         <p>Seconds</p>
                     </div>
