--- a/index.html
+++ b/index.html
@@ -243,35 +243,43 @@
                 </div>
 
                 <div class="flex gap-3 justify-center mt-5">
-                    <div>
-                        <div class="flex items-center">
+
+                    <div class="flex items-center">
+                        <div class="grid grid-cols-1 justify-center">
                             <h2 class="text-4xl lg:text-5xl font-bold ">29</h2>
+                            <p class="mx-auto">Days</p>
+                        </div>
+                        <div class="justify-center">
                             <img class="w-6 h-6" src="images/Frame (1).png" alt="">
-                        </div>
-                        <p>Days</p>
+                            
+                        </div>    
                     </div>
 
-                    <div>
-                        <div class="flex items-center">
-                            <h2 class="text-4xl lg:text-5xl font-bold "> 15</h2>
-                            <img class="w-6 h-6" src="images/Frame (4).jpg" alt="">
+                    <div class="flex items-center">
+                        <div class="grid grid-cols-1 justify-center">
+                            <h2 class="text-4xl lg:text-5xl font-bold ">15</h2>
+                            <p class="mx-auto">Hours</p>
                         </div>
-                        <p>Hours</p>
+                        <div class="justify-center">
+                            <img class="w-6 h-6" src="images/Frame (1).png" alt="">   
+                      </div>    
                     </div>
 
-                    <div>
-                        <div class="flex items-center">
+                    <div class="flex items-center">
+                        <div class="grid grid-cols-1 justify-center">
                             <h2 class="text-4xl lg:text-5xl font-bold ">25</h2>
-                            <img class="w-6 h-6" src="images/Frame (4).jpg" alt="">
+                            <p class="mx-auto">Minutes</p>
                         </div>
-                        <p>Minutes</p>
+                        <div class="justify-center">
+                            <img class="w-6 h-6" src="images/Frame (1).png" alt="">                
+                        </div>    
                     </div>
 
-                    <div>
-                        <div class="flex">
+                    <div class="flex items-center">
+                        <div class="grid grid-cols-1 justify-center">
                             <h2 class="text-4xl lg:text-5xl font-bold ">08</h2>
-                        </div>
-                        <p>Seconds</p>
+                            <p class="mx-auto">Seconds</p>
+                        </div>                        
                     </div>
                 </div>
 
