--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     </div>
 
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 ">
-                        <a href="#slide4" class="btn btn-circle">❮</a>
-                        <a href="#slide2" class="btn btn-circle">❯</a>
+                        <a href="#slide4" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❮</a>
+                        <a href="#slide2" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❯</a>
                     </div>
 
                     <!-- slider lower part -->
@@ -135,8 +135,6 @@
 
                 </div>
 
-
-
                 <!-- slider 2 -->
                 <div id="slide2" class="carousel-item relative w-full bg-cover bg-center h-[350px] lg:h-[470px]"
                     style="background-image: url('images/banner2.png');">
@@ -151,8 +149,8 @@
                     </div>
 
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide1" class="btn btn-circle">❮</a>
-                        <a href="#slide3" class="btn btn-circle">❯</a>
+                        <a href="#slide1" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❮</a>
+                        <a href="#slide3" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❯</a>
                     </div>
 
 
@@ -180,8 +178,8 @@
                         </button>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide2" class="btn btn-circle">❮</a>
-                        <a href="#slide4" class="btn btn-circle">❯</a>
+                        <a href="#slide2" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❮</a>
+                        <a href="#slide4" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❯</a>
                     </div>
 
                     <!-- slider lower part -->
@@ -209,8 +207,8 @@
                     </div>
 
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide3" class="btn btn-circle">❮</a>
-                        <a href="#slide1" class="btn btn-circle">❯</a>
+                        <a href="#slide3" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❮</a>
+                        <a href="#slide1" class="btn btn-circle bg-slate-900 border-none text-white hover:text-slate-900">❯</a>
                     </div>
 
                     <!-- slider lower part -->
