--- a/index.html
+++ b/index.html
@@ -422,8 +422,11 @@
 
                                         <div class="modal-action flex justify-around">
                                             <!-- if there is a button in form, it will close the modal -->
-                                            <button class="btn border-rose-400">Close</button>
-                                            <button class="btn btn-error text-white">Buy Now</button>
+                                            <div class="flex justify-center gap-5">
+                                                <button class="btn border-rose-400">Close</button>
+                                                <button class="btn btn-error text-white">Buy Now</button>
+                                            </div>
+
                                         </div>
                                     </form>
                                 </dialog>
@@ -498,8 +501,10 @@
 
                                         <div class="modal-action flex justify-around">
                                             <!-- if there is a button in form, it will close the modal -->
-                                            <button class="btn border-rose-400">Close</button>
-                                            <button class="btn btn-error text-white">Buy Now</button>
+                                            <div class="flex justify-center gap-5">
+                                                <button class="btn border-rose-400">Close</button>
+                                                <button class="btn btn-error text-white">Buy Now</button>
+                                            </div>
                                         </div>
                                     </form>
                                 </dialog>
@@ -573,8 +578,10 @@
 
                                         <div class="modal-action flex justify-around">
                                             <!-- if there is a button in form, it will close the modal -->
-                                            <button class="btn border-rose-400">Close</button>
-                                            <button class="btn btn-error text-white">Buy Now</button>
+                                            <div class="flex justify-center gap-5">
+                                                <button class="btn border-rose-400">Close</button>
+                                                <button class="btn btn-error text-white">Buy Now</button>
+                                            </div>
                                         </div>
                                     </form>
                                 </dialog>
@@ -649,8 +656,10 @@
 
                                         <div class="modal-action flex justify-around">
                                             <!-- if there is a button in form, it will close the modal -->
-                                            <button class="btn border-rose-400">Close</button>
-                                            <button class="btn btn-error text-white">Buy Now</button>
+                                            <div class="flex justify-center gap-5">
+                                                <button class="btn border-rose-400">Close</button>
+                                                <button class="btn btn-error text-white">Buy Now</button>
+                                            </div>
                                         </div>
                                     </form>
                                 </dialog>
