--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                 <!-- Open the modal using ID.showModal() method -->
                                 <button class="btn" onclick="my_modal_1.showModal()">Details </button>
                                 <dialog id="my_modal_1" class="modal">
-                                    <form method="dialog" class="modal-box">
+                                    <form method="dialog" class="modal-box w-96" >
                                         <div class="grid justify-items-center">
                                             <img src="images/fruit6.png" alt="">
                                             <h3 class="font-bold text-lg">Apples</h3>
@@ -467,7 +467,7 @@
                                 <!-- Open the modal using ID.showModal() method -->
                                 <button class="btn" onclick="my_modal_2.showModal()">Details </button>
                                 <dialog id="my_modal_2" class="modal">
-                                    <form method="dialog" class="modal-box">
+                                    <form method="dialog" class="modal-box w-96">
                                         <div class="grid justify-items-center">
                                             <img src="images/fruit7.png" alt="">
                                             <h3 class="font-bold text-lg">Orange</h3>
@@ -543,7 +543,7 @@
                                 <!-- Open the modal using ID.showModal() method -->
                                 <button class="btn" onclick="my_modal_3.showModal()">Details </button>
                                 <dialog id="my_modal_3" class="modal">
-                                    <form method="dialog" class="modal-box">
+                                    <form method="dialog" class="modal-box w-96">
                                         <div class="grid justify-items-center">
                                             <img src="images/fruit8.png" alt="">
                                             <h3 class="font-bold text-lg">Red Dragon</h3>
@@ -621,7 +621,7 @@
                                 <!-- Open the modal using ID.showModal() method -->
                                 <button class="btn" onclick="my_modal_4.showModal()">Details </button>
                                 <dialog id="my_modal_4" class="modal">
-                                    <form method="dialog" class="modal-box">
+                                    <form method="dialog" class="modal-box w-96">
                                         <div class="grid justify-items-center">
                                             <img src="images/fruit9.png" alt="">
                                             <h3 class="font-bold text-lg">Banana</h3>
