--- a/index.html
+++ b/index.html
@@ -770,9 +770,9 @@
         <!-- why choose us section -->
         <section class="py-10 lg:py-24">
 
-            <div class="text-center pb-10">
+            <div class="text-center lg:pb-10">
                 <h2 class="text-5xl font-bold pb-5">Why Choose Us</h2>
-                <p class="pb-8">Contrary to popular belief, is not simply random text. It has roots in a piece of
+                <p class="lg:pb-8">Contrary to popular belief, is not simply random text. It has roots in a piece of
                     classical <br>Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
 
@@ -848,7 +848,7 @@
                     <!-- 2 -->
                     <div class="grid grid-cols-1 place-items-center lg:flex">
                         <div class="pr-5 place-items-start">
-                            <img class="w-10 " src="images/like 1.png" alt="">
+                            <img class="w-10 " src="images/ice-cream 1.png" alt="">
                         </div>
                         <div>
                             <h3 class=" font-semibold">The Benefits Only</h3>
