--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
                             <img class="w-10 " src="images/ice-cream 1.png" alt="">
                         </div>
                         <div>
-                            <h3 class=" font-semibold">The Benefits Only</h3>
+                            <h3 class=" font-bold">Sustainable Practice</h3>
                             <hr class="w-32  mx-auto lg:mx-0">
                             <!-- <h5 class="bg-zinc-900 border-b-4 w-24 mb-2"></h5> -->
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
@@ -864,7 +864,7 @@
                             <img class="w-10 " src="images/like 1.png" alt="">
                         </div>
                         <div>
-                            <h3 class=" font-semibold">The Benefits Only</h3>
+                            <h3 class=" font-bold">The Benefits Only</h3>
                             <hr class="w-32  mx-auto lg:mx-0">
                             <!-- <h5 class="bg-zinc-900 border-b-4 w-24 mb-2"></h5> -->
                             <p>Professional employees are there for you to pick the most amazing and fresh fruits.</p>
