--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
     <footer>
         <section class="bg-black py-24">
             <!-- footer logo -->
-            <div class="flex items-center mx-auto  justify-center text-center text-white">
+            <div class="flex items-center mx-auto  justify-center text-center text-white gap-5">
                 <img src="images/logo.png" alt="">
                 <h3 class="font-semibold text-3xl">Fruit Burst</h3>
             </div>
